--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -5,5 +5,9 @@ main:
     url: /categories/
   - title: "Tags"
     url: /tags/
-  - title: "About"
-    url: /about/
+  - title: "Portfolio"
+    url:  /portfolio/
+  - title: "Resume"
+    url:  /resume/
+  - title: "Blog"
+    url:  /blog/
