aligned side bar icons

--- a/_config.yml
+++ b/_config.yml
@@ -66,13 +66,13 @@ author:
   bio    : "Student game developer and aspiring game producer."
   links:
     - label:  "LinkedIn"
-      icon:   "fab fa-linkedin"
+      icon:   "fab fa-fw fa-linkedin"
       url:    "https://www.linkedin.com/in/acjh13/"
     - label:  "GitHub"
       icon:   "fab fa-fw fa-github"
       url:    "https://github.com/acjh13"
     - label:  "Itch"
-      icon:   "fab fa-itch-io"
+      icon:   "fab fa-fw fa-itch-io"
       url:    "https://acjh13.itch.io/"
     - label:  "Email"
       icon:   "fas fa-fw fa-envelope-square"
