removed resume page
edited the about page and made the resume link directly to the pdf

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -2,6 +2,6 @@ main:
   - title: "Portfolio"
     url:  /portfolio/
   - title: "Resume"
-    url:  /resume/
+    url:  /assets/AndrewChong_Resume.pdf
   - title: "Blog"
     url:  /blog/
