postmortem kindred update

--- a/_config.yml
+++ b/_config.yml
@@ -134,6 +134,9 @@ collections:
 category_archive:
   type: liquid
   path: /categories/
+
 tag_archive:
   type: liquid
   path: /tags/
+
+search: true
