--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ plugins:
 author:
   name   : "Andrew Chong Jiahao"
   avatar : "/assets/images/bio-photo.jpg"
-  bio    : "Student Game Developer & Aspiring Game Producer."
+  bio    : "Game Producer & Developer"
   links:
     - label:  "LinkedIn"
       icon:   "fab fa-fw fa-linkedin"
